# tket-json-rs

./: .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  README.md  cliff.toml  justfile  release-plz.toml
.github/workflows/: ci.yml  drop-cache.yml  missing-ops.yml  pr-title.yml  release-plz.yml  semver-checks.yml
src/: lib.rs  pass.rs  pytket.rs
src/pass/: standard.rs
tests/: missing_optypes.rs  pass_roundtrip.rs  pytket_schema.rs
tests/data/circuit/: simple.json
tests/data/pass/: repeat_clifford.json  repeat_until_remove_no_mid_measure.json  repeat_with_metric_clifford.json  standard_clifford_simp.json
tket-json-rs/: CHANGELOG.md  Cargo.toml  README.md
tket-json-rs/src/: circuit_json.rs  opbox.rs  optype.rs
tket-json-rs/src/pass/: standard.rs
tket-json-rs/tests/: circuit_roundtrip.rs  pytket_schema.rs
tket-json-rs/tests/data/circuit/: classical.json  diagonal-box.json  rng.json  simple.json
tket-json-rs/tests/data/pass/: sequence_clifford_remove.json
