[workspace]
resolver = "2"
members = ["tket-json-rs"]
default-members = ["tket-json-rs"]

[workspace.package]
rust-version = "1.75"
edition = "2021"
repository = "https://github.com/Quantinuum/tket-json-rs"
homepage = "https://github.com/Quantinuum/tket-json-rs"
license = "Apache-2.0"

[workspace.lints.rust]
missing_docs = "warn"

[workspace.lints.clippy]
allow_attributes = "warn"
iter_over_hash_type = "warn"
result_large_err = "warn"
large_enum_variant = "warn"

[workspace.dependencies]
itertools = "0.14.0"
pyo3 = ">= 0.27.0, < 0.29"
pythonize = ">= 0.27.0, < 0.29"
rstest = "0.26.1"
schemars = "1.2.1"
serde = "1.0.228"
serde_json = "1.0.149"
strum = ">= 0.27, < 0.29"
assert-json-diff = "2.0.2"

# Lower version bounds to support 1.75 MSRV
derive_more = "2.0.1"
# UUID 1.22 requires getrandom 0.4, which requires rust 1.85.
uuid = ">=1.20, < 1.24"
